src/scss/1_components/mainpage/_mainpage.scss
.mainpage {
  min-width: 17.5em;
  font-family: $text-main; 
  background: $color-light url("../img/bg-noise-300x300.png") repeat;

  &__cover {
    padding-top: 1.2rem;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    min-height: 100%;

    @media (min-width: $phablet) {
      padding-right: 0.5rem;
    }

    @media (min-width: $tablet) {
      padding-left: 1.25rem;
    }

    @media (min-width: $tablet) and (orientation: portrait) {
      min-height: $mobile;
    }

    @media (min-width: $desktop) and (orientation: portrait) {
      min-height: $phablet;
      padding-left: 0.25rem;
    }

    @media (min-width: $desktop) and (orientation: landscape) {
      min-height: 100%;
      width: 65%;
      padding-left: 0.25rem;
    }

    @media (min-width: $desktophd) and (orientation: landscape) {
      width: 46.55rem;
    }
  }


  &__title {    
    .js & {  
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      padding-top: 1.2em;
      padding-left: 0.25em;
      padding-right: 0.25em;
      padding-bottom: 1.25em;
      transition: clip-path $navbar-scroll;
      z-index: $z-bar;
      background: $color-light url("../img/bg-noise-300x300.png") repeat;
      clip-path: inset(0 -2px -2px 0);
      will-change: clip-path;

      &.is-collapsed {clip-path: inset(0 0 100% 0);}

      @media (min-width: $phablet) {
        width: auto;
        margin-top: 0.7rem;
        margin-left: 0.5rem;
        padding: 0.5em 0.25em;
        border-radius: 1.5em;
        border: 1px solid $text-color-gray;
      }

      @media (min-width: $tablet) {
        padding: 0.5em 0.8em;
      }

      @media (min-width: $desktop) {
        margin-left: 0;
        padding: 0.5em;
        border: none;
      }
    }
  }

  &__slogan {
    @media (min-width: $phablet) and (max-width: $tablet) and (orientation: landscape) {
    }
  }

  &__navbar {
    .js & {
      position: fixed;
      right: 0;
      top: 0;
      height: 100%;
      padding-top: 1.25rem;
      padding-left: 0.25rem;
      padding-right: 0.25rem;
      z-index: $z-bar;
      background: $color-light url("../img/bg-noise-300x300.png") repeat;

      clip-path: inset(0 0 0 0);
      will-change: clip-path;
      transition: clip-path $navbar-scroll;

      &.is-collapsed {clip-path: inset(0 0 0 100%);}

      @media (min-width: $phablet) {
        padding-right: 0.5rem;
        height: auto;
        background: none;
      }

      @media (min-width: $desktop) and (orientation: landscape) {
        height: auto;
        right: 35%;
      }

      @media (min-width: $desktophd) and (orientation: landscape) {
        right: calc(100% - 46.55rem);
      }
    }
  }

  &__contacts {
    .js & {
      position: fixed;
      bottom: 0;
      z-index: $z-bar;

      will-change: transform;
      transition: transform $btnbar-scroll;

      &.is-collapsed {transform: translateY(100%);}
    }
  }

  &__lang {
    .js & {
      position: fixed;
      right: 0;
      bottom: 0;
      z-index: $z-bar;

      will-change: transform;
      transition: transform $btnbar-scroll;

      @media (min-width: $desktop) and (orientation: landscape) {
        right: 35%;
      }

      @media (min-width: $desktophd) and (orientation: landscape) {
        right: calc(100% - 46.55rem);
      }

      &.is-collapsed {transform: translateY(100%);}
    }
  }


  &__portrait {
    padding-left: 0.7rem;
    padding-bottom: 2.4rem;
  
    @media (min-width: $phablet) {
      padding-left: 1.75rem;
    }
  
    @media (min-width: $desktop) and (orientation: landscape) {
      position: fixed;
      right: 0;
      top: 0;
      bottom: 0;
      width: 35%;
      padding: 0;
      z-index: $z-overlay;
    }

    @media (min-width: $desktophd) and (orientation: landscape) {
      width: calc(100% - 46.55rem);
    }
  }


  &__about {
    padding-top: 2.4rem;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    padding-bottom: 3.2rem;
  }
}

